--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
             {% endblock %}
             <section>
                 <p>
-                    This Weather App was developed by Make School students © 2020.
+                    This Weather App was improved by EvilGenius13 © 2022.
                 </p>
             </section>
         </main>
