--- a/templates/comparison_results.html
+++ b/templates/comparison_results.html
@@ -6,8 +6,8 @@
         TODO: Replace the hard-coded cities and date below with data from the 
         server.
     #}
-    <h1>Weather in [CITY1] and [CITY2]</h1>
-    <p>[TODAYS_DATE]</p>
+    <h1>Weather in {{city}} and {{city2}}</h1>
+    <p>{{date}}</p>
 
 
     {#
@@ -15,19 +15,19 @@
         Replace 'F' with the appropriate units.
     #}
     <p>
-        It is [NUM_DEGREES] [UNITS] [WARMER/COLDER] in [CITY1] than in [CITY2] today.
+        It is {{tempcompare}} {{units_letter}} {{warmcold}} in {{city}} than in {{city2}} today.
     </p>
 
     <p>
-        The humidity in [CITY1] is [AMOUNT] [GREATER/LESS] than in [CITY2].
+        The humidity in {{city}} is {{humcompare}} {{humgorl}} than in {{city2}}.
     </p>
 
     <p>
-        The wind speed in [CITY1] is [AMOUNT] [GREATER/LESS] than in [CITY2].
+        The wind speed in {{city}} is {{windcompare}} {{windgorl}} than in {{city2}}.
     </p>
 
     <p>
-        The sun sets in [CITY1] [HOURS] hours [EARLIER/LATER] than in [CITY2].
+        The sun sets in {{city}} {{sunsetcompare}} hours {{sunsetgorl}} than in {{city2}}.
     </p>
     
 </section>
